--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -141,7 +141,7 @@ small, .small {
     padding-top: 60px;
     padding-bottom: 60px;
     overflow: hidden;
-    // background: #fdd93d;
+    background: #fdd93d;
     // padding: 5rem 5rem;
 }
 
