--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -4,7 +4,7 @@ layout: default
 permalink: "/categories.html"
 ---
 {% for category in site.categories %}
-<h4 class="mt-5 mb-4 pb-2 border-bottom" id="{{ category[0] | replace: " ","-" }}"><span class="text-capitalize small font-weight-bold">In "{{ category[0] }}"</span></h4>
+<h4 class="mt-5 mb-4 pb-2 border-bottom" id="{{ category[0] | replace: " ","-" }}"><span class="text-capitalize small font-weight-bold">Sản phẩm: "{{ category[0] }}"</span></h4>
 <div class="row">
 {% assign pages_list = category[1] %}
 {% for post in pages_list %}
