--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -141,7 +141,7 @@ small, .small {
     padding-top: 60px;
     padding-bottom: 60px;
     overflow: hidden;
-    // padding: 5rem 5rem;
+    padding: 2rem 2rem;
 }
 
 @media only screen and (max-width: 1024px) {
