--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -135,7 +135,7 @@ small, .small {
 ================================================== */
 .hero {
     background: #fdd93d;
-    padding: 5rem 5rem;
+    padding: 2.5rem;
     display: flex;
     justify-content: flex-start;
     align-items: center;
