--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,10 +1,10 @@
 <div class="sidebar sticky-top">        
-    <div class="sidebar-section">
+    <!-- <div class="sidebar-section">
         <h5><span>Newsletter</span></h5>
         {% include newsletter.html %}
-    </div>
+    </div> -->
     <div class="sidebar-section">
         <h5><span>Your Ad Here</span></h5>
-        <img src="{{site.baseurl}}/assets/images/ad.png">
+        <img src="{{site.baseurl}}/assets/images/bao-hiem-o-to-bsh.jpg">
     </div>
 </div>
