--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
         {% include newsletter.html %}
     </div> -->
     <div class="sidebar-section">
-        <h5><span>Your Ad Here</span></h5>
+        <!-- <h5><span>Your Ad Here</span></h5> -->
         <img src="{{site.baseurl}}/assets/images/bao-hiem-o-to-bsh.jpg">
     </div>
 </div>
