--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,35 +1,5 @@
 <div class="sidebar sticky-top">        
     <div class="sidebar-section">
-        <img src="{{site.baseurl}}/assets/images/bao-hiem-o-to-bsh.jpg">
+        <!-- <img src="{{site.baseurl}}/assets/images/bao-hiem-o-to-bsh.jpg"> -->
     </div>
-    <!-- Messenger Chat Plugin Code -->
-    <div id="fb-root"></div>
-
-    <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat">
-    </div>
-
-    <script>
-      var chatbox = document.getElementById('fb-customer-chat');
-      chatbox.setAttribute("page_id", "PAGE-ID");
-      chatbox.setAttribute("attribution", "biz_inbox");
-    </script>
-
-    <!-- Your SDK code -->
-    <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          xfbml            : true,
-          version          : 'API-VERSION'
-        });
-      };
-
-      (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script>
 </div>
