--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -81,8 +81,11 @@ post_class: post-template
 						<img class="author-thumb" src="{{site.baseurl}}/{{author.avatar}}" alt="{{ author.display_name }}">
 					</div>
 					<div class="col-md-10">
-						<a target="_blank" class="link-dark" href="{{ author.web }}">{{ author.display_name }}</a><a target="_blank" href="{{ author.twitter }}" class="btn follow">Follow</a>
-						<span class="author-description">{{ author.description }}</span>						
+						<a target="_blank" class="link-dark" href="{{ author.web }}">{{ author.display_name }}</a>
+                        <!-- <a target="_blank" href="{{ author.twitter }}" class="btn follow">Follow</a> -->
+                        <div>
+                            <span class="author-description">{{ author.description }}</span>	
+                        </div>					
 					</div>
 				</div>				
                 {% endif %}
