--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@ gtag('config', '{{site.ganalytics}}');
             </svg>
           </button> -->
           
-          <!-- <div class="collapse navbar-collapse" id="navbarResponsive"> -->
+          <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto font-weight-bold d-flex align-items-center">
               {% for item in site.data.menus.topmenu %}
               <li class="nav-item">
@@ -85,7 +85,7 @@ gtag('config', '{{site.ganalytics}}');
               </li>
               {% endfor %}
             </ul>
-          <!-- </div> -->
+          </div>
 
         </div>
       </nav>
