--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,16 +77,15 @@ gtag('config', '{{site.ganalytics}}');
             </svg>
           </button> -->
           
-          <div class="collapse navbar-collapse" id="navbarResponsive">
+          <!-- <div class="collapse navbar-collapse" id="navbarResponsive"> -->
+            <ul class="d-flex align-items-center">
               {% for item in site.data.menus.topmenu %}
-              <ul class="navbar-nav ml-auto font-weight-bold d-flex align-items-center">
-                <li class="nav-item">
-                  <a class="nav-link px-3 {% if item.class %}{{item.class}}{% endif %}" href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" alt="{{item.title}}">{{item.title}}</a>
-                </li>
-              </ul>
+              <li class="nav-item">
+                <a class="nav-link px-3 {% if item.class %}{{item.class}}{% endif %}" href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" alt="{{item.title}}">{{item.title}}</a>
+              </li>
               {% endfor %}
-    
-          </div>
+            </ul>
+          <!-- </div> -->
 
         </div>
       </nav>
