--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,13 +78,15 @@ gtag('config', '{{site.ganalytics}}');
           </button> -->
           
           <!-- <div class="collapse navbar-collapse" id="navbarResponsive"> -->
-            <ul class="d-flex align-items-center">
+            
               {% for item in site.data.menus.topmenu %}
-              <li class="nav-item">
-                <a class="nav-link px-3 {% if item.class %}{{item.class}}{% endif %}" href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" alt="{{item.title}}">{{item.title}}</a>
-              </li>
+              <ul class="d-flex align-items-center"></ul>
+                <li class="nav-item">
+                  <a class="nav-link px-3 {% if item.class %}{{item.class}}{% endif %}" href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" alt="{{item.title}}">{{item.title}}</a>
+                </li>
+              </ul>
               {% endfor %}
-            </ul>
+           
           <!-- </div> -->
 
         </div>
