--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,15 +78,13 @@ gtag('config', '{{site.ganalytics}}');
           </button> -->
           
           <!-- <div class="collapse navbar-collapse" id="navbarResponsive"> -->
-            
+            <ul class="d-flex align-items-center">
               {% for item in site.data.menus.topmenu %}
-              <ul class="d-flex align-items-center"></ul>
-                <li class="nav-item">
-                  <a class="nav-link px-3 {% if item.class %}{{item.class}}{% endif %}" href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" alt="{{item.title}}">{{item.title}}</a>
-                </li>
-              </ul>
+              <li class="nav-item">
+                <a class="nav-link px-3 {% if item.class %}{{item.class}}{% endif %}" href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" alt="{{item.title}}">{{item.title}}</a>
+              </li>
               {% endfor %}
-           
+            </ul>
           <!-- </div> -->
 
         </div>
