--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@ gtag('config', '{{site.ganalytics}}');
 
           <div class="d-flex align-items-center">
             
-            <!-- <span class="ml-3 text-muted small">Follow</span> -->
+            <a href="tel:0977287042">0977.287.042</a>
 
             <!-- <a class="d-inline-block social-icon" target="_blank" href="{{site.social.twitter}}">
               <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
@@ -70,22 +70,22 @@ gtag('config', '{{site.ganalytics}}');
             </a> -->
 
           </div>
-<!--     
+    
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
               <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
             </svg>
-          </button> -->
+          </button>
           
-          <!-- <div class="collapse navbar-collapse" id="navbarResponsive"> -->
-            <ul class="d-flex align-items-center">
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto font-weight-bold d-flex align-items-center">
               {% for item in site.data.menus.topmenu %}
               <li class="nav-item">
                 <a class="nav-link px-3 {% if item.class %}{{item.class}}{% endif %}" href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" alt="{{item.title}}">{{item.title}}</a>
               </li>
               {% endfor %}
             </ul>
-          <!-- </div> -->
+          </div>
 
         </div>
       </nav>
