--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@ gtag('config', '{{site.ganalytics}}');
 
           <div class="d-flex align-items-center">
             
-            <a href="tel:0977287042">0977.287.042</a>
+            <a class="d-inline-block" href="tel:0977287042">0977.287.042</a>
 
             <!-- <a class="d-inline-block social-icon" target="_blank" href="{{site.social.twitter}}">
               <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
