--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@ gtag('config', '{{site.ganalytics}}');
             </ul>
           </div>
           
-          <a href="tel:0977287042" class="btn btn-dark text-white btn-lg" target="_blank">0977.287.042</a>
+          <a href="{{site.call}}" class="btn btn-dark text-white btn-lg" target="_blank">{{site.phone}}</a>
         </div>
       </nav>
     </div>  
