--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,6 +19,8 @@ layout: default
     {{content}}
   </div>
 
+  <a href="{{site.call}}" class="btn btn-dark text-white btn-lg" target="_blank">Liên Hệ</a>
+
   {% if page.comments == true %}
   <div id="comments">             
       {% include disqus.html %} 
